[package]
name = "link-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Jeremiah Russell <jrussell@jerus.ie>"]
description = "A lightweight Rust library for creating URL redirects with short names that generate web pages redirecting to longer links on your website."
rust-version = "1.80"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jerus-org/link-bridge"
keywords = ["redirect", "url", "short link", "web", "rust"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]
categories = ["Web Programming"]
publish = true

[dependencies]
