[workspace]
members = ["crates/link-bridge"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Jeremiah Russell <jrussell@jerus.ie>"]
rust-version = "1.81"
license = "MIT"
repository = "https://github.com/jerus-org/link-bridge"

[workspace.dependencies]
base62 = "2.2.3"
chrono = "0.4.44"
once_cell = "1.21.4"
regex = "1.11.1"
serde_json = "1.0.149"
thiserror = "2.0.12"

[workspace.lints.clippy]
uninlined-format-args = "warn"
